<resources>
    <string name="app_name">Code Challenge Ex</string>

    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="select_date">Select Date</string>
    <string name="internet_not_available">Internet Not Available</string>
    <string name="favourites">Favourites</string>
    <string name="dialog_title">Title</string>
    <string name="dialog_ok">OK</string>
    <string name="submit">Submit</string>
    <string name="from_date_cannot_be_empty">From Date cannot be Empty</string>
    <string name="to_date_cannot_be_empty">To Date cannot be Empty</string>
    <string name="custom_days_picture">Custom Days Pictures</string>
    <string name="my_favourite_pictures">My Favourite Pictures</string>
    <string name="current_day_picture">Current Day Picture</string>
    <string name="no_favourites_found">No Favourites Found</string>
    <string name="favourites_list">Favourites List</string>
</resources>