<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <TextView
        android:id="@+id/tv_last_updated_date_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_5_dp"
        android:layout_marginEnd="@dimen/dimen_10_dp"
        android:textColor="@color/colorText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerListField"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/dimen_10_dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@id/tv_last_updated_date_field" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="@dimen/dimen_15_dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_plus_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fab_buttons_layout"
        android:layout_width="@dimen/dimen_200_dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_10_dp"
        android:background="@color/light_black"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/fab"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_custom_days_picture"
            style="@style/text_style_medium_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimen_10_dp"
            android:background="@android:color/transparent"
            android:paddingStart="@dimen/dimen_10_dp"
            android:paddingEnd="@dimen/dimen_10_dp"
            android:text="@string/custom_days_picture"
            android:textAllCaps="false"
            android:textColor="@color/colorText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_current_day_picture"
            style="@style/text_style_medium_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimen_10_dp"
            android:background="@android:color/transparent"
            android:paddingStart="@dimen/dimen_10_dp"
            android:paddingEnd="@dimen/dimen_10_dp"
            android:text="@string/current_day_picture"
            android:textAllCaps="false"
            android:textColor="@color/colorText"
            app:layout_constraintBottom_toTopOf="@id/btn_custom_days_picture"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_my_favourite_picture"
            style="@style/text_style_medium_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimen_10_dp"
            android:background="@android:color/transparent"
            android:paddingStart="@dimen/dimen_10_dp"
            android:paddingEnd="@dimen/dimen_10_dp"
            android:text="@string/my_favourite_pictures"
            android:textAllCaps="false"
            android:textColor="@color/colorText"
            app:layout_constraintBottom_toTopOf="@id/btn_current_day_picture"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>