<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background">

    <TextView
        android:id="@+id/start_date"
        style="@style/text_style_medium_normal"
        android:layout_width="@dimen/dimen_150_dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_10_dp"
        android:layout_marginTop="@dimen/dimen_20_dp"
        android:gravity="center_vertical"
        android:minHeight="@dimen/dimen_50_dp"
        android:text="@string/start_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_start_date"
        style="@style/text_style_medium_normal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_10_dp"
        android:layout_marginTop="@dimen/dimen_20_dp"
        android:layout_marginEnd="@dimen/dimen_10_dp"
        android:background="@drawable/bottom_line_bg"
        android:gravity="center_vertical"
        android:minHeight="@dimen/dimen_50_dp"
        android:paddingStart="0dp"
        android:paddingEnd="@dimen/dimen_10_dp"
        app:drawableEndCompat="@drawable/ic_calendar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/start_date"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/end_date"
        style="@style/text_style_medium_normal"
        android:layout_width="@dimen/dimen_150_dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_10_dp"
        android:layout_marginTop="@dimen/dimen_20_dp"
        android:gravity="center_vertical"
        android:minHeight="@dimen/dimen_50_dp"
        android:text="@string/end_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/start_date" />

    <TextView
        android:id="@+id/tv_end_date"
        style="@style/text_style_medium_normal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_10_dp"
        android:layout_marginTop="@dimen/dimen_20_dp"
        android:layout_marginEnd="@dimen/dimen_10_dp"
        android:background="@drawable/bottom_line_bg"
        android:gravity="center_vertical"
        android:minHeight="@dimen/dimen_50_dp"
        android:paddingStart="0dp"
        android:paddingEnd="@dimen/dimen_10_dp"
        app:drawableEndCompat="@drawable/ic_calendar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/start_date"
        app:layout_constraintTop_toBottomOf="@id/tv_start_date" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_submit"
        style="@style/text_style_medium_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20_dp"
        android:background="@color/teal_200"
        android:paddingStart="@dimen/dimen_20_dp"
        android:paddingEnd="@dimen/dimen_20_dp"
        android:text="@string/submit"
        android:textColor="@color/colorText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_end_date" />

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_20_dp"
        app:layout_constraintTop_toBottomOf="@id/btn_submit" />

</androidx.constraintlayout.widget.ConstraintLayout>